// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render Wall adding the className hardMode 1`] = `
<div
  className="Wall hardMode "
>
  <Block
    value={2}
  />
  <Block
    value={4}
  />
</div>
`;

exports[`should render Wall adding the className hardMode moveError separeted by space 1`] = `
<div
  className="Wall hardMode moveError "
>
  <Block
    value={2}
  />
  <Block
    value={4}
  />
</div>
`;

exports[`should render Wall adding the className moveError 1`] = `
<div
  className="Wall moveError "
>
  <Block
    value={2}
  />
  <Block
    value={4}
  />
</div>
`;

exports[`should render Wall with 2 Blocks 1`] = `
<div
  className="Wall "
>
  <Block
    value={2}
  />
  <Block
    value={4}
  />
</div>
`;

exports[`should render Wall without crashing 1`] = `
<div
  className="Wall "
>
  
</div>
`;
